--- a/java/index.html
+++ b/java/index.html
@@ -13,11 +13,12 @@
         <h1 id="header1">JavaScipt LAb</h1>
         <button onclick="likeFunction()">Like</button>
         <button onclick="loveFunction()">Love</button>
-        <button>Sad</button>
+        <button onclick="sadFunction()">Sad</button>
         <!-- ลดขนาดหัวใจ(-10)  ถ้าขนาดน้อยกว่า 5 เปลี่ยนรูปเป็น อกหัก -->
         <p id="result">0</p>
         <i class="fa-solid fa-heart" style="color: crimson;" ></i>
         <i class="fa-sharp fa-solid fa-heart-crack"></i>
+        <i class="fa-solid fa-face-sad-cry"></i>
         <p>
             <script>
                 document.write("Computer Science");
@@ -30,7 +31,7 @@
     <p id="demo">A Paragraph.</p>
     <button type="button" onclick="myFunction()">Try it</button>
     <p>(myFunction is stored in an external filecalled"myScript.js")</p>
-    <script src="/javascript/myScript.js"></script>
+    <script src="/java/myScript.js"></script>
     
 </body>
 </html>
